cilium-cli/connectivity/builder/manifests/template/testdata/wildcard_prefix/in.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "client-egress-tls-sni-wildcard"
specs:
- description: "TLS SNI policy with wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{wildcardPrefix (trimSuffix .ExternalTarget ".") 1}}"
- description: "TLS SNI policy with wildcard multiple"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{wildcardPrefix (trimSuffix .ExternalTarget ".") 2}}"
